# STM32

./: .gitignore  README.md  STM32.code-workspace
board/art-pi/: README.md
board/art-pi/projects/applications/: .mxproject  CMakeLists.txt  STM32H750XBHx_QFLASH_template.ld  applications.ioc  resume_ld_file.bat
board/art-pi/projects/applications/Bsp/Components/ft5xx6/: Ft5xx6.cpp  Ft5xx6.hpp
board/art-pi/projects/applications/Bsp/Components/ili9481/: Ili9481.c  Ili9481.h
board/art-pi/projects/applications/Bsp/Components/sdcard/: sdcard_test.c  sdcard_test.h
board/art-pi/projects/applications/Bsp/Components/sdram/: sdram.c  sdram.h
board/art-pi/projects/applications/Bsp/Components/w25qxx/: w25qxx.c  w25qxx.h
board/art-pi/projects/applications/Core/Inc/: FreeRTOSConfig.h  crc.h  cybsp.h  dcmi.h  i2c.h  main.h  sdmmc.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
board/art-pi/projects/applications/Core/Src/: dcmi.c  dma2d.c  eth.c  fdcan.c  fmc.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  sdmmc.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c  wifi_task.c
board/art-pi/projects/applications/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_ll_sdmmc.h
board/art-pi/projects/applications/FATFS/App/: fatfs.c  fatfs.h
board/art-pi/projects/applications/FreeRTOS_CLI/: app_cli.c  app_cli.h  cli_commands.c  cli_commands.h  readme.md  serial.c
board/art-pi/projects/applications/MyDrivers/display/: Display.cpp  Display.hpp  TFT_Lcd.hpp
board/art-pi/projects/applications/MyDrivers/hw_iic/: hw_iic.cpp  hw_iic.hpp
board/art-pi/projects/applications/MyDrivers/led/: Led.cpp
board/art-pi/projects/applications/MyDrivers/print/: print.c  print.h
board/art-pi/projects/applications/MyDrivers/sdram/: sdram.c  sdram.h
board/art-pi/projects/applications/TouchGFX/: ApplicationTemplate.touchgfx.part  applications.touchgfx  target.config
board/art-pi/projects/applications/TouchGFX/assets/texts/: texts.xml
board/art-pi/projects/applications/TouchGFX/config/gcc/: app.mk
board/art-pi/projects/applications/TouchGFX/config/msvs/: Application.props
board/art-pi/projects/applications/TouchGFX/simulator/msvs/: Application.vcxproj.filters
board/art-pi/projects/applications/cmake/: gcc-arm-none-eabi.cmake
board/art-pi/projects/applications/cmake/stm32cubemx/: CMakeLists.txt  CMakeLists_template.txt
board/art-pi/projects/bootloader/: .mxproject  STM32H750XBHx_FLASH copy.ld  STM32H750XBHx_FLASH.ld  bootloader.ioc  readme.md
board/art-pi/projects/bootloader/Core/Inc/: w25qxx.h  w25qxx_conf.h
board/art-pi/projects/bootloader/Core/Src/: main.c  qspi.c  stm32h7xx_hal_msp.c  w25qxx.c
board/art-pi/projects/bootloader/cmake/stm32cubemx/: CMakeLists.txt
